# iree-external-tests

./: .gitignore  README.md  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake
scripts/: run_matmul_tests.sh
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt
tests/hal-cts/: CMakeLists.txt
tests/matmul/: CMakeLists.txt
